Fix: Z-index da nav-bar sobrepor todo o site

--- a/Assets/Css/Navbar.css
+++ b/Assets/Css/Navbar.css
@@ -39,7 +39,7 @@
 }
 
 .navbar-rolagem{
-    z-index: 2;
+    z-index: 4;
     background-color: rgba(0, 0, 0, 0.527);
     backdrop-filter: blur(10px);
     transition: all 0.4s ease 0s;
